# ikigai

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  deploy.sh  deploy_landing_page.sh  docker-compose.yml  package.json  turbo.json
graphql_server/: .env.sample  .gitignore  Base.Dockerfile  Cargo.toml  Dockerfile  Migration.Dockerfile  README.md  Workflow.Dockerfile  authorization.polar  docker-compose.yml
graphql_server/docs/: Authorization Policy Design.md
graphql_server/email_templates/en/: invitation.html  magic_link.html  notification.html  otp.html
graphql_server/migrations/2024-04-12-062551_squash-models-before-open/: down.sql  up.sql
graphql_server/migrations/2024-04-13-091704_refactor-to-space/: down.sql  up.sql
graphql_server/migrations/2024-04-13-144135_remove-space-documents/: down.sql  up.sql
graphql_server/migrations/2024-04-14-074412_remove-password/: down.sql  up.sql
graphql_server/migrations/2024-04-14-114505_user_last_activity/: down.sql  up.sql
graphql_server/migrations/2024-04-15-031938_remove-hide-rule/: down.sql  up.sql
graphql_server/migrations/2024-04-21-091606_remove-page-history-and-templates/: down.sql  up.sql
graphql_server/migrations/2024-04-21-094410_remove-transcoding/: down.sql  up.sql
graphql_server/migrations/2024-04-24-153951_space-invite-tokens/: down.sql  up.sql
graphql_server/migrations/2024-04-26-141857_add-notification/: down.sql  up.sql
graphql_server/migrations/2024-05-02-141958_document-assigned-users/: down.sql  up.sql
graphql_server/migrations/2024-05-03-140333_remove-organization/: down.sql  up.sql
graphql_server/migrations/2024-05-03-142010_space-role/: down.sql  up.sql
graphql_server/migrations/2024-05-07-054140_page-models/: down.sql  up.sql
graphql_server/migrations/2024-05-09-064228_document-icon/: down.sql  up.sql
graphql_server/migrations/2024-05-16-060053_refactor-document/: down.sql  up.sql
graphql_server/migrations/2024-05-16-075627_change-body-page-content-to-json/: down.sql  up.sql
graphql_server/migrations/2024-05-19-021723_refactor-assignment-and-submissions/: down.sql  up.sql
graphql_server/migrations/2024-06-12-145824_remove-document-assigned-users/: down.sql  up.sql
graphql_server/migrations/2024-06-12-161546_private-space-documents/: down.sql  up.sql
graphql_server/migrations/2024-06-16-055812_submission-test-duration/: down.sql  up.sql
graphql_server/migrations/2024-06-20-120730_document-assigned-users/: up.sql
graphql_server/migrations/2024-06-28-063756_writing-block/: down.sql  up.sql
graphql_server/migrations/2024-07-08-094407_quiz-block/: down.sql  up.sql
graphql_server/migrations/2024-07-10-025426_remove-writing-block/: down.sql  up.sql
graphql_server/migrations/2024-07-19-090429_document-visibility-mode/: down.sql  up.sql
graphql_server/migrations/2024-08-04-083707_ai_history/: down.sql  up.sql
graphql_server/migrations/2024-08-06-145034_document-tags/: down.sql  up.sql
graphql_server/migrations/2024-08-12-004001_user_type/: down.sql  up.sql
graphql_server/migrations/2024-08-17-025952_embeded-forms/: down.sql  up.sql
graphql_server/src/: authentication_token.rs  code_gen.rs  connection_pool.rs  constant.rs  error.rs  main.rs
graphql_server/src/authorization/: authorize_helper.rs  class_auth.rs  document_auth.rs  mod.rs  organization_auth.rs  rubric_auth.rs  space_auth.rs  user_auth.rs
graphql_server/src/background_job/: document_job.rs  mod.rs  storage_job.rs  submission_job.rs
graphql_server/src/db/: ai_history.rs  assignment.rs  assignments.rs  band_score.rs  class.rs  class_member.rs  document.rs  document_assigned_user.rs  document_assigned_users.rs  document_template.rs  document_version.rs  documents.rs  embedded_session.rs  file.rs  mod.rs  notification.rs  organization.rs  page.rs  page_block.rs  quiz.rs  rubric.rs  schema.rs  space.rs  space_member.rs  submission.rs  tag.rs  threads.rs  user.rs  writing_block.rs
graphql_server/src/graphql/: context_caching_data.rs  data_loader.rs  ikigai_mutation.rs  ikigai_query.rs  ikigai_subscription.rs  mod.rs  notification_center.rs  open_exam_mutation.rs  open_exam_query.rs  open_exam_subscription.rs  paging.rs  scalar_type.rs
graphql_server/src/graphql/assignment_action/: assignment_mutation.rs  assignment_query.rs  mod.rs
graphql_server/src/graphql/class_action/: class_mutation.rs  class_query.rs  mod.rs
graphql_server/src/graphql/document_action/: document_mutation.rs  document_query.rs  mod.rs
graphql_server/src/graphql/file_action/: file_mutation.rs  file_query.rs  mod.rs
graphql_server/src/graphql/quiz_action/: mod.rs  (+2 more)
graphql_server/src/helper/: authorize_helper.rs  document_helper.rs  mod.rs  submission_helper.rs  user_helper.rs
graphql_server/src/mailer/: mod.rs  template.rs
graphql_server/src/notification_center/: mod.rs
graphql_server/src/service/: audio_waveform.rs  google.rs  ikigai_ai.rs  media_convert.rs  mod.rs  redis.rs  storage.rs
graphql_server/src/util/: log_util.rs  mod.rs  time_util.rs  url_util.rs  var_util.rs
ikigai_ai/: Dockerfile  README.md  pyproject.toml
ikigai_ai/src/: __init__.py  index.py
ikigai_ai/src/quiz_generator/: fill_in_blank.py  llm.py  multiple_choice.py  select_option.py  single_choice.py  type.py
(+825 files in other folders)
