[package]
name = "aj"
version = "0.1.5"
edition = "2021"
authors = ["cptrodgers <cptrodgers@gmail.com>"]
description = "Background Job based on Actix"
readme = "README.md"
repository = "https://github.com/cptrodgers/aj"
license = "MIT OR Apache-2.0"
keywords = ["background", "job", "actix", "cron", "schedule"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "aj"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
redis = "0.23.0"
cron = "0.12.0"
actix = "0.13.0"
actix-rt = "2.2"
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
lazy_static = { version = "1.4.0", features = [] }
async-trait = "0.1.74"
