[package]
name = "open-exam-graphql-server"
version = "0.1.0"
authors = ["Rodgers <me@cptrodgers.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.64"
serde_json = "1.0.64"
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
dotenv = "0.15.0"
async-graphql = { version = "3.0.38", features = ["log", "uuid", "dataloader", "apollo_tracing"] }
async-graphql-actix-web = "3.0.38"
diesel = { version = "1.4.7", features = ["postgres", "chrono", "uuidv07", "serde_json", "r2d2"] }
chrono = "0.4"
pbkdf2 = { version = "0.7", features = ["simple"] }
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
jsonwebtoken = "7"
rand_core = { version = "0.6" }
reqwest = { version = "0.11.10", features = ["json", "stream"] }
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
hmac = "0.11.0"
simple-aws-s3 = "0.2.3"
lazy_static = "1.4.0"
futures-core = "0.3.15"
tokio = { version = "1.9.0", features = ["sync"] }
validator = { version = "0.13.0", features = ["unic", "phone"] }
thiserror = "1.0.25"
aws-config = "0.11.0"
aws-sdk-s3 = "0.11.0"
aws-sdk-sns = "0.11.0"
aws-sdk-mediaconvert = "0.11.0"
async-recursion = "1.0.0"
zip = "0.6.2"
itertools = "0.10.3"
anyhow = "1.0.58"
lettre = "0.10.1"
regex = "1"
oso = { version = "0.26.3", features = ["uuid-07"]}
actix-cors = "0.6.4"
tera = "1.17.1"
csv = "1.1.6"
redis = "0.23.0"
cron = "0.12.0"
r2d2 = "0.8.10"
bytes = "1.1.0"
urlencoding = "2.1.3"
aj = "0.4.2"
awc = { version = "3.4.0", features = ["rustls"]}
dyn-clone = "1.0.17"
