[tool.poetry]
name = "ikigai-ai"
version = "0.1.0"
description = "AI system of Ikigai"
authors = ["cptrodgers <cptrodgers@gmail.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dspy-ai = "^2.4.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
